Finalizando Projeto Le Scone do curso de sass da Origamid

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,5 +4,8 @@
 @import "variaveis-e-mixins";
 @import "geral";
 
-//Pages
+//Components
 @import "intro";
+@import "menu";
+@import "contato";
+@import "footer"
