--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -119,8 +119,8 @@ $s-device: 480px;
 
 @mixin row {
   position: relative;
-  margin-left: $gutter/2;
-  margin-right: $gutter/2;
+  margin-left: -$gutter/2;
+  margin-right: -$gutter/2;
   @include d(s) {
     margin-left: 0px;
     margin-right: 0px;
